<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img"
        android:layout_marginTop="-18dp"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:src="@drawable/keke"
        />



    <TextView
       android:layout_marginLeft="100dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:id="@+id/k"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/k"
        android:textStyle="bold"
        android:textSize="27sp"
        android:textAlignment="center"
        android:layout_marginRight="10dp"

        android:layout_below="@+id/img"/>
    <TextView
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kedrop"
        android:textStyle="bold"
        android:textSize="27sp"
        android:layout_below="@+id/img"
        android:layout_toRightOf="@+id/e"
        />
   <TextView
       android:layout_marginTop="20dp"
       android:paddingTop="7dp"
       android:id="@+id/e"
       android:layout_marginStart="-17dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:drawableStart="@android:drawable/presence_online"
       android:layout_below="@+id/img"
       android:layout_toRightOf="@+id/k"
       android:drawableLeft="@android:drawable/presence_online"
       android:layout_marginLeft="-17dp" />

    <Button
        android:textColor="@android:color/black"
        android:id="@+id/signin"
        android:textAlignment="center"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/signin"
        android:textSize="15sp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:background="@drawable/white_background"
        android:shadowColor="@android:color/black"
        android:layout_below="@+id/k"
        android:layout_marginLeft="40dp"
        />
    <Button
        android:id="@+id/register"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/reg"
        android:textSize="15dp"
        android:paddingTop="4dp"
        android:paddingRight="5dp"
        android:layout_toRightOf="@+id/signin"
        android:background="@drawable/yellow_bg"
        android:shadowColor="@android:color/black"
        android:layout_below="@+id/k"
        android:layout_marginLeft="50dp"
        />


</RelativeLayout>