<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SiginIn">

    <TextView
        android:id="@+id/signin_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
       android:layout_centerHorizontal="true"
        />


    <TextView
        android:id="@+id/email_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_symbol"
        android:text="@string/email"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/email_symbol"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:background="@drawable/white_background"
        android:backgroundTint="@color/swhite"
        android:paddingLeft="8dp"
        android:layout_marginLeft="11.5dp"
        android:layout_marginRight="48dp"
        />
    <TextView
        android:id="@+id/password_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:text="@string/password"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/password_symbol"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:background="@drawable/white_background"
        android:backgroundTint="@color/swhite"
        android:paddingLeft="8dp"
        android:layout_marginLeft="11.5dp"
        android:layout_marginRight="48dp"
        />

    <Button
        android:id="@+id/signin_btn"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/signin"
        android:textSize="15dp"
        android:paddingTop="4dp"
        android:paddingRight="5dp"
        android:layout_toRightOf="@+id/signin"
        android:background="@drawable/yellow_bg"
        android:shadowColor="@android:color/black"
        android:layout_below="@+id/password"
        android:layout_marginLeft="50dp"
        />

    </RelativeLayout>

